	   - Add optparse based parsing API with support for extracting
	     FUSE related options to a FuseArgs instance.
	   - Update xmp.py to the new API, enhance it with a "-o root=PATH"
	     option.
	   - Add compat hooks (python variable, environment variable).
	   - Document these changes in README.new_fusepy_api.
	   - bump __version__ to 0.2pre1.

2006-05-24  Csaba Henk <csaba.henk@creo.hu>
	* Revamp fs initialization code.
	   - Get rid of both of the kopts/lopts and the fuse_opt stuff,
	     just keep opts in a dict and assemble a simple argc/argv pair
	     from that. This means that for all supported API versions we can
	     get away with the fuse_setup() / *fuse_loop*() / fuse_teardown()
	     call sequence. This is much more clean and correct than the
	     earlier approaches, and differenciating between APIs boils down
	     to differenciating between the exact form of the above routines.
	   - Properly catch and propagate errors.
	   - Add crude support for fetching options from command line to xmp.py.
	* Syntax cleanup:
	   - Strip leo markup. I'm not using leo and I find that markup somewhat
	     obtrusive. OTOH it seems to be auto-generated so my editions will
	     break it anyway.
	   - Fix indetation, uniformize look.

2006-05-23  Csaba Henk <csaba.henk@creo.hu>
	* Fix statfs index mismatch in xmp.py.
	* Rebase build system on pkg-config.
	   - Credits: setup.py based on that of shout-python (python bindings to
	     libshout, part of the icecast project)
	* Update code so that it can be compiled against FUSE libs with API from
	  21 to 26
	   - Credits: aggregated from contributions, code snippets and ideas of
	     Simon Barner, Csaba Henk, Roman Shterenzon and Miklos Szeredi
	* Result of argument type check was ignored in FuseInvalidate(), fix
	  it

2006-02-03  Sebastien Delafond <sdelafond@gmx.net>
  
	* Removed unnecessary "st->st_ino = 0" line in _fusemodule.c.
	* Added __init__ argument handling in fuse.py. Command-line 