@@ -15,6 +15,8 @@
 	   - Add compat hooks (python variable, environment variable).
 	   - Document these changes in README.new_fusepy_api.
 	   - bump __version__ to 0.2pre1.
+           - add os.statvfs() compatible statvfs method, mark statfs
+             deprecated, keep statfs useable via statfs -> statvfs conversion
 
 2006-05-24  Csaba Henk <csaba.henk@creo.hu>
 	* Revamp fs initialization code.
